@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.817 - Added filtering to //gs validate. Added pet_midcast() user function.
+-------------------------------------------------
 GearSwap 0.816 - Automaton midcast fixed. //gs fixed. //gs export no longer requires a user file (except for the sets option).
 -------------------------------------------------
 GearSwap 0.815 - Automaton information added. 
